(WIP) Adding localization and `CurrentContext`