@@ -28,11 +28,17 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>-parameters</arg>
+                        <arg>--add-modules jdk.incubator.concurrent</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <!--
+      TODO: ensure run configuration includes the following:
+      &#45;&#45;add-opens java.base/java.time=ALL-UNNAMED &#45;&#45;add-modules jdk.incubator.concurrent
+    -->
 
     <!-- Ensure we can see Soklet snapshots -->
     <repositories>
@@ -80,6 +86,13 @@
             <groupId>com.pyranid</groupId>
             <artifactId>pyranid</artifactId>
             <version>2.0.0</version>
+        </dependency>
+
+        <!-- Lokalized for text localization -->
+        <dependency>
+            <groupId>com.lokalized</groupId>
+            <artifactId>lokalized-java</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
         <!-- SLF4J for logging -->
